--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,12 @@ h2 {
     color: white;
 }
 
+h4 {
+    font-family: Arvo;
+    font-size: 20;
+    color: white;
+}
+
 p {
     font-family: Arvo;
     font-size: 20;
@@ -54,6 +60,15 @@ div.left {
     min-height: 600px;
 }
 
+div.right {
+    background-color: rgb(172, 221, 252);
+    
+    text-align: right;
+    width: 100%;
+    padding: 1%;
+    min-height: 600px;
+}
+
 body {
     background-color: white(0, 82, 0);
 }
@@ -80,3 +95,11 @@ footer {
     width: 100%;
     height: 100%;
 }
+
+li{
+    list-style: none;
+    list-style-position:inside;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
